# rocky9_ioc_migration

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
rocky9_ioc_migration/: bug_fixes.py  does_not_build.txt  env_vars_versions.json  find_inactive_iocs.py  get_module_versions.py  get_version.py  ioc_add_commit.sh  ioc_clone_all.sh  ioc_fork_all.sh  ioc_git_commit.sh  ioc_make_all.sh  ioc_pr_all.sh  ioc_remove_inactive.sh  main.py  module_version_exceptions.json  modules.json  modules_versions_edited.txt  update_iocs.py
